--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-loading": "^2.0.3",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "router": "^1.3.8",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.20",
     "gh-pages": "^6.0.0"
   }
 }
